--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -34,7 +34,7 @@
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                 <h:link id="editProcess" outcome="/pages/processEdit" title="#{msgs.processEdit}"
-                        rendered="#{SecurityAccessController.hasAuthorityForClient('editProcess')}">
+                        rendered="#{SecurityAccessController.hasAuthorityToEditProcess()}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="referer" value="processes"/>
                     <f:param name="id" value="#{process.id}"/>
@@ -93,7 +93,7 @@
                 </h:commandLink>
 
                 <p:commandLink id="deleteProcess" action="#{ProcessForm.delete}" title="#{msgs.delete}"
-                               rendered="#{SecurityAccessController.hasAuthorityForClient('deleteProcess')}"
+                               rendered="#{SecurityAccessController.hasAuthorityToDeleteProcess()}"
                                update="processesTabView:processesForm:processesTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{process.id}" target="#{ProcessForm.processByID}"/>
