--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -36,7 +36,8 @@
         <!-- actions -->
         <p:column rendered="#{SecurityAccessController.hasAnyAuthorityGlobalOrForClient('editTask, deleteTask')}"
                   headerText="#{msgs.actions}" id="taskAction" styleClass="actionsColumn">
-            <h:link outcome="taskTemplateEdit" id="editTask" title="#{msgs.detailsDesSchritts}">
+            <h:link outcome="taskTemplateEdit" id="editTask" title="#{msgs.detailsDesSchritts}"
+                    rendered="#{SecurityAccessController.hasAuthorityToEditTask()}">
                 <f:param name="id" value="#{item.id}"/>
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
