--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
@@ -29,11 +29,18 @@
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="roleEdit" title="#{msgs.roleEdit}"
+                <h:link id="viewRole" outcome="roleEdit" title="#{msgs.roleView}"
+                        rendered="#{SecurityAccessController.hasAuthorityToViewRole()}">
+                    <f:param name="id" value="#{item.id}" />
+                    <i class="fa fa-eye fa-lg"/>
+                </h:link>
+
+                <h:link id="editRole" outcome="roleEdit" title="#{msgs.roleEdit}"
                         rendered="#{SecurityAccessController.hasAuthorityToEditRole()}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
+
                 <p:commandLink id="deleteRole" action="#{RoleForm.delete}" title="#{msgs.delete}"
                                rendered="#{SecurityAccessController.hasAuthorityToDeleteRole()}"
                                update="usersTabView:rolesTable">
