--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -33,7 +33,14 @@
                 <h:outputText value="#{process.project.title}"/>
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
-                <h:link id="editProcess" outcome="/pages/processEdit" title="#{msgs.processEdit}"
+                <h:link id="viewProcess" outcome="processEdit" title="#{msgs.processView}"
+                        rendered="#{SecurityAccessController.hasAuthorityToViewProcess()}">
+                    <i class="fa fa-eye fa-lg"/>
+                    <f:param name="referer" value="processes"/>
+                    <f:param name="id" value="#{process.id}"/>
+                </h:link>
+
+                <h:link id="editProcess" outcome="processEdit" title="#{msgs.processEdit}"
                         rendered="#{SecurityAccessController.hasAuthorityToEditProcess()}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="referer" value="processes"/>
