--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
@@ -35,11 +35,18 @@
 
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="/pages/docketEdit" title="#{msgs.editDocket}"
+                <h:link id="viewDocket" outcome="docketEdit" title="#{msgs.docketView}"
+                        rendered="#{SecurityAccessController.hasAuthorityToViewDocket()}">
+                    <f:param name="id" value="#{item.id}"/>
+                    <i class="fa fa-eye fa-lg"/>
+                </h:link>
+
+                <h:link id="editDocket" outcome="docketEdit" title="#{msgs.editDocket}"
                         rendered="#{SecurityAccessController.hasAuthorityToEditDocket()}">
                     <f:param name="id" value="#{item.id}"/>
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
+
                 <p:commandLink id="deleteDocket" action="#{DocketForm.delete}" title="#{msgs.delete}"
                                rendered="#{SecurityAccessController.hasAuthorityToDeleteDocket()}"
                                update="projectsTabView:docketTable">
