--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -40,16 +40,24 @@
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:outputText>
                 <h:form id="templateActionForm">
-                    <h:link id="editTemplate" outcome="/pages/templateEdit" title="#{msgs.editTemplate}"
+                    <h:link id="viewTemplate" outcome="templateEdit" title="#{msgs.templateView}"
+                            rendered="#{SecurityAccessController.hasAuthorityToViewTemplate()}">
+                        <i class="fa fa-eye fa-lg"/>
+                        <f:param name="id" value="#{item.id}"/>
+                    </h:link>
+
+                    <h:link id="editTemplate" outcome="templateEdit" title="#{msgs.editTemplate}"
                             rendered="#{SecurityAccessController.hasAuthorityToEditTemplate()}">
                         <i class="fa fa-pencil-square-o fa-lg"/>
                         <f:param name="id" value="#{item.id}"/>
                     </h:link>
+
                     <h:commandLink action="#{TemplateForm.duplicate(item.id)}" immediate="true"
                                    title="#{msgs.duplicateTemplate}"
                                    rendered="#{SecurityAccessController.hasAuthorityToAddTemplate()}">
                         <h:outputText><i class="fa fa-clone fa-lg"/></h:outputText>
                     </h:commandLink>
+
                     <p:commandLink id="deleteTemplate" action="#{TemplateForm.delete}" title="#{msgs.delete}"
                                    rendered="#{SecurityAccessController.hasAuthorityToDeleteTemplate()}"
                                    update="projectsTabView:templateTable">
