--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/userList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/userList.xhtml
@@ -57,11 +57,18 @@
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="userEdit" title="#{msgs.userEdit}"
+                <h:link id="viewUser" outcome="userEdit" title="#{msgs.userView}"
+                        rendered="#{SecurityAccessController.hasAuthorityToViewUser()}">
+                    <f:param name="id" value="#{item.id}"/>
+                    <i class="fa fa-eye fa-lg"/>
+                </h:link>
+
+                <h:link id="editUser" outcome="userEdit" title="#{msgs.userEdit}"
                         rendered="#{SecurityAccessController.hasAuthorityToEditUser()}">
                     <f:param name="id" value="#{item.id}"/>
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
+
                 <p:commandLink id="deleteUser" action="#{UserForm.delete}"
                                rendered="#{SecurityAccessController.hasAuthorityToDeleteUser()}"
                                update="usersTabView:usersTable">
