--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
@@ -17,7 +17,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-    <f:view locale="#{SpracheForm.locale}">
+    <f:view locale="#{LanguageForm.locale}">
         <p:dialog id="imprintDialog"
                   styleClass="legal-dialog"
                   widgetVar="imprintDialog"
