--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
@@ -26,7 +26,7 @@
             <p:ajax event="dragdrop" listener="#{Metadaten.onNodeDragDrop}"
                     update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
             <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
-                <ui:param name="elementType" value="#{element.type.getNameByLanguage(SpracheForm.locale)}"/>
+                <ui:param name="elementType" value="#{element.type.getNameByLanguage(LanguageForm.locale)}"/>
                 <h:outputText value="#{elementType}"/> <h:outputText
                     value=" #{Metadaten.getLogicalPageNumber(element)}" rendered="#{elementType eq msgs.page}"/>
             </p:treeNode>
