--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditRolesPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditRolesPopup.xhtml
@@ -17,32 +17,30 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-    <f:view locale="#{SpracheForm.locale}">
-        <!-- edit dialog -->
-        <p:dialog widgetVar="addRoleDialog"
-                  header="#{msgs.rolesAdd}"
-                  width="700px"
-                  modal="true"
-                  dynamic="true">
-            <h:form id="roleForm">
-                <p:dataTable id="roleTable"
-                             var="role"
-                             value="#{RoleForm.lazyDTOModel}"
-                             lazy="true"
-                             rows="#{LoginForm.myBenutzer.tableSize}"
-                             paginator="true">
-                    <p:column headerText="#{msgs.role}">
-                        <h:outputText value="#{role.title}"/>
-                    </p:column>
-                    <p:column headerText="#{msgs.actions}">
-                        <p:commandLink id="addRule" action="#{ProcessForm.addRole}"
-                                       oncomplete="toggleSave()" update="editForm:tabs:roleTable">
-                            <i class="fa fa-user-plus"/>
-                            <f:param name="ID" value="#{role.id}"/>
-                        </p:commandLink>
-                    </p:column>
-                </p:dataTable>
-            </h:form>
-        </p:dialog>
-    </f:view>
+    <!-- edit dialog -->
+    <p:dialog widgetVar="addRoleDialog"
+              header="#{msgs.rolesAdd}"
+              width="700px"
+              modal="true"
+              dynamic="true">
+        <h:form id="roleForm">
+            <p:dataTable id="roleTable"
+                         var="role"
+                         value="#{RoleForm.lazyDTOModel}"
+                         lazy="true"
+                         rows="#{LoginForm.myBenutzer.tableSize}"
+                         paginator="true">
+                <p:column headerText="#{msgs.role}">
+                    <h:outputText value="#{role.title}"/>
+                </p:column>
+                <p:column headerText="#{msgs.actions}">
+                    <p:commandLink id="addRule" action="#{ProcessForm.addRole}" oncomplete="toggleSave()"
+                                   update="editForm:tabs:roleTable">
+                        <i class="fa fa-user-plus"/>
+                        <f:param name="ID" value="#{role.id}"/>
+                    </p:commandLink>
+                </p:column>
+            </p:dataTable>
+        </h:form>
+    </p:dialog>
 </ui:composition>
