Make title configurable from translation file

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
@@ -13,7 +13,7 @@
 
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <title><ui:insert name="title">Kitodo.Production</ui:insert></title>
+    <title><ui:insert name="title">#{msgs.applicationTitle}</ui:insert></title>
 
     <meta name="description" content="KITODO.PRODUCTION Base-Theme"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"/>
