--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -41,7 +41,7 @@
             <h:outputText>
                 <h:form id="templateActionForm">
                     <h:link id="viewTemplate" outcome="templateEdit" title="#{msgs.templateView}"
-                            rendered="#{SecurityAccessController.hasAuthorityToViewTemplate()}">
+                            rendered="#{SecurityAccessController.hasAuthorityToViewTemplate() and not SecurityAccessController.hasAuthorityToEditTemplate()}">
                         <i class="fa fa-eye fa-lg"/>
                         <f:param name="id" value="#{item.id}"/>
                     </h:link>
