--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -45,7 +45,7 @@
             <h:outputText>
                 <h:form>
                     <h:link id="viewWorkflow" outcome="workflowEdit" title="#{msgs.workflowView}"
-                            rendered="#{SecurityAccessController.hasAuthorityToViewWorkflow()}">
+                            rendered="#{SecurityAccessController.hasAuthorityToViewWorkflow() and not SecurityAccessController.hasAuthorityToEditWorkflow()}">
                         <i class="fa fa-eye fa-lg"/>
                         <f:param name="id" value="#{item.id}"/>
                     </h:link>
