--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
@@ -33,7 +33,7 @@
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
                 <h:link id="viewRole" outcome="roleEdit" title="#{msgs.roleView}"
-                        rendered="#{SecurityAccessController.hasAuthorityToViewRole()}">
+                        rendered="#{SecurityAccessController.hasAuthorityToViewRole() and not SecurityAccessController.hasAuthorityToEditRole()}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-eye fa-lg"/>
                 </h:link>
