Remove validation for template titles - they will not be used for directory creation nor update by scripts

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
@@ -20,7 +20,7 @@
             <div>
                 <p:outputLabel for="title" value="#{msgs.templateTitle}"/>
                 <p:inputText id="title" placeholder="#{msgs.templateTitle}"
-                             value="#{TemplateForm.title}"
+                             value="#{TemplateForm.template.title}"
                              class="input"
                              required="#{empty param['editForm:saveButtonToggler']}">
                     <p:ajax event="blur"/>
