--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
@@ -17,8 +17,9 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
 
-    <h:outputScript library="js" name="modeler.js" target="body"/>
-    <h:outputScript library="js" name="modeler-custom.js" target="body"/>
+	<h:outputStylesheet name="css/modeler.css"/>
+    <h:outputScript library="js" name="modeler_min.js" target="body"/>
+    <h:outputScript library="js" name="modeler_custom.js" target="body"/>
 
     <p:panelGrid columns="2" layout="grid">
         <p:row>
